# docs/swagger.yaml
@@ -252,6 +252,66 @@ paths:
           description: Logout successful
         '500':
           description: Server error   
+  /show_user_data:
+    get:
+      summary: Retrieve user data based on refresh token
+      description: Fetches user data, including likes, dislikes, added categories, and added cars based on the user's refresh token.
+      tags:
+        - Auth
+      parameters:
+        - name: refreshtoken
+          in: cookie
+          required: true
+          description: Refresh token to verify the user's identity.
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successfully retrieved user data.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: string
+                    description: User's ID.
+                  likes:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        carId:
+                          type: string
+                          description: Car ID liked by the user.
+                  dislikes:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        carId:
+                          type: string
+                          description: Car ID disliked by the user.
+                  addedCategoriesByUser:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        _id:
+                          type: string
+                          description: Category ID added by the user.
+                  addedCarsByUser:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        _id:
+                          type: string
+                          description: Car ID added by the user.
+        '401':
+          description: Unauthorized. Invalid or missing refresh token.
+        '500':
+          description: Internal server error.
   /get_cars:
     get:
       summary: Brend bo‘yicha avtomobillarni olish
